# edif.io

./: .dockerignore  .gitignore  AGENTS.md  AGENTS.md.bak  Caddyfile  Cargo.toml  Dockerfile  Makefile  README.md  start.sh
.cursor/plans/: adapter_game_options_88826a9c.plan.md
.cursor/skills/i18n/: SKILL.md
.cursor/skills/powerups/: SKILL.md
.github/workflows/: ci-autofix.yml  ci-validate.yml
adapters/: AGENTS.md
adapters/arithmetic/: AGENTS.md  Cargo.toml
adapters/arithmetic/src/: lib.rs
adapters/keyboarding/: AGENTS.md  Cargo.toml
adapters/keyboarding/src/: lib.rs
adapters/state-abbreviations/: Cargo.toml
adapters/state-abbreviations/src/: lib.rs
client/: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  playwright.fullstack.config.ts  svelte.config.js  vite.config.ts
client/e2e/: full-stack.test.ts  home.test.ts
client/e2e-fullstack/: roundtrip.test.ts
client/messages/: en.json  l33t.json
client/project.inlang/: settings.json
client/scripts/: leetify.mjs
client/src/: app.css  app.html  hooks.client.ts
client/src/lib/: constants.ts  customization.ts  randomColor.ts
client/src/lib/dev/: StoryStage.svelte  (+4 more)
client/src/routes/: +error.svelte  +layout.svelte  +page.svelte
core/: AGENTS.md
core/src/: adapter.rs  customization.rs  game.rs  lib.rs  powerup.rs  protocol.rs  server.rs
data/: player-customization.json
scripts/: generate-agents-md.sh  generate-customization.sh
server/: AGENTS.md  Cargo.toml
server/src/: main.rs
server/tests/: integration.rs
(+32 files in other folders)
